Move components & organize imports

--- a/src/components/blocks/PreviewBlock.astro
+++ b/src/components/blocks/PreviewBlock.astro
@@ -1,6 +1,6 @@
 ---
-import Block from "@/components/Block.astro";
 import Badge from "@/components/Badge.astro";
+import Block from "@/components/blocks/Block.astro";
 
 interface Props {
 	title: string;
