--- a/src/layouts/HorizontalScrollLayout.astro
+++ b/src/layouts/HorizontalScrollLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
-import HomeSidebar from "@/components/HomeSidebar";
-import HomeMobileTopBar from "@/components/HomeMobileTopBar";
+import HomeSidebar from "@/components/nav/HomeSidebar";
+import HomeMobileTopBar from "@/components/nav/HomeMobileTopBar";
 
 interface Props {
 	title: string;
