--- a/src/components/blocks/ArticleBlock.astro
+++ b/src/components/blocks/ArticleBlock.astro
@@ -1,5 +1,5 @@
 ---
-import Block from "@/components/Block.astro";
+import Block from "@/components/blocks/Block.astro";
 
 interface Props {
 	title: string;
