--- a/src/components/blocks/Block.astro
+++ b/src/components/blocks/Block.astro
@@ -1,11 +1,12 @@
 ---
 interface Props {
 	class?: string;
+	[key: string]: any;
 }
 
-const { class: className } = Astro.props;
+const { class: className, ...rest } = Astro.props;
 ---
 
-<div class:list={["h-fit w-full md:h-full md:w-fit", className]}>
+<div class:list={["h-fit w-full md:h-full md:w-fit", className]} {...rest}>
 	<slot />
 </div>
