--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import ArticleBlock from "@/components/blocks/ArticleBlock.astro";
 import PreviewBlock from "@/components/blocks/PreviewBlock.astro";
 import HorizontalScrollLayout from "@/layouts/HorizontalScrollLayout.astro";
